tests/programs/modules/errors/circular/a.tiny
import "b.tiny";

fn func_a() -> int {
    return func_b() + 1;
}
